--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.0",
+    "gulp-uglify-es": "^3.0.0",
     "select2": "^4.0.6-rc.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
