--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -79,7 +79,7 @@ stages:
 - ${{ each var in variables }}:
   - ${{ if in(var.key, 'tran','dev','test','int','pp','pr') }}:
     - ${{ if eq(var.value, 'true') }}:
-      - stage: ${{var.Key}}-cip
+      - stage: ${{var.Key}}cip
         variables:
         - name: serviceConnection
           ${{ if or(eq(var.key, 'dev'), eq(var.key, 'tran')) }}:
